# Multi-Modal-Autonomous-Vehicle

./: .gitignore  model.config  model.sdf
install/: local_setup.sh  setup.sh
install/car_description/share/car_description/: package.sh
install/car_description/share/car_description/launch/: spawn_car.launch.py
install/car_description/share/car_description/models/: car_chassis.sdf
log/: latest_build
src/: ROS2 Lauch Cheatsheet
src/Worlds/: Two obstacles
src/car_description/: ROS2 Lauch Cheatsheet  package.xml  setup.py
src/car_description/launch/: drive_car.launch.py
src/car_description/models/: car_chassis.sdf
src/perception_inference/: package.xml  setup.cfg  setup.py
src/perception_inference/launch/: ml_infer.launch.py
src/perception_inference/perception_inference/: fusion_decision_node.py  infer_node.py  oak_detection_distance.py  ultrasonic_monitor.py
src/perception_inference/resource/: perception_inference
