<?xml version="1.0"?>
<package format="3">
  <name>perception_inference</name>
  <version>0.0.1</version>
  <description>Perception + inference nodes for OAK-like camera in Gazebo</description>

  <maintainer email="wongkyle04@gmail.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
